Fix: Overflow problem on news box.

--- a/src/stylesheets/base/_layout.scss
+++ b/src/stylesheets/base/_layout.scss
@@ -34,6 +34,8 @@
     background: $brand-silver;
     opactiy: 0.85;
     max-width: 30%;
+    max-height: 95%;
+    overflow: auto;
 }
 
 .text-box-main {
